--- a/Snake/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/Snake/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Figure.cs" />
     <Compile Include="Horizontal line.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Snake.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vertical line.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
